function isCaptured corrected (get(0))